    - Ticket #5299, LAV Video Decoder: Fix corrupted decoding of some HEVC files
* Updated British English, Catalan, Chinese (Simplified), Czech, Dutch, Finnish, French, Galician, German,
  Greek, Japanese, Korean, Russian, Serbian, Spanish and Ukrainian translations
! EVR-CP/Sync renderers could produce wrong colors
! Do not mirror the status bar and the time indicator when using an RTL layout
! Ticket #2167, Prevent the task bar buttons from being RTLed when Windows is configured to use RTL layout
! Ticket #2516, VSFilter: Fix PGS/DVB subtitles with different size than video frame
! Ticket #5183, Fix a rare crash when processing after playback event
! Ticket #5239, Fix a crash when specifying a non-existent monitor in the command line (/monitor)
! Ticket #5241, Improve the handling of RTL layout for dockable bars (Playlist, Subresync, etc.)
! Ticket #5247, "Information" panel was not showing new lines until window resize
! Ticket #5259, The auto fit factor could not be modified unless auto fit was used as auto-zoom
! Ticket #5262, The "Go to next/previous subtitle" feature did not work for some subtitles


1.7.8 - 25 January 2015
=======================
+ DVB: Show current event time in the status bar
+ DVB: Add context menu to the navigation dialog
+ Add Finnish and Serbian translations
+ Ticket #907, Enable "Properties" dialog for DVD and DVB playback modes
+ Ticket #1091, Support MediaInfo analyse for DVD
+ Ticket #1494, Add tooltip in the "Organize Favorites" dialog with path of the item
+ Ticket #2438, Keep history of recently opened DVD directories
+ Ticket #3647, Internal LAV Video Decoder: Support Cinepack and QPEG in low-merit mode
+ Ticket #4941, Support embedded cover-art
* DVB: Improve channel switching speed
* The "Properties" dialog should open faster being that the MediaInfo analysis is now done asynchronously
* Make double-click tolerance consistent with system settings